--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             transform: scale(1.2);
         }
 
-        .home-section {
+        .about-section {
             text-align: left;
             padding: 20px;
             background: #aca8d1;
@@ -90,7 +90,7 @@
             box-shadow: 0 0 10px rgba(15, 15, 15, 0.05);
         }
 
-        .home-section h2 {
+        .about-section h2 {
             margin-top: 0;
         }
 
@@ -159,7 +159,7 @@
             background: #4f46e5;
         }
 
-        #home, #cv {
+        #about, #cv {
             display: none;
         }
     </style>
@@ -190,14 +190,15 @@
     </div>
 
     <nav style="text-align:center; margin-bottom:30px;">
-        <button onclick="showSection('home')" id="tab-home" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">Home</button>
+        <button onclick="showSection('about')" id="tab-about" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">about</button>
         <button onclick="showSection('cv')" id="tab-cv" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">CV</button>
     </nav>
 
-    <section id="home" class="home-section">
+    <section id="about" class="about-section">
         <p>I am a postdoctoral researcher in bioinformatics with the Translational Microbiome Science group at Universitaetsklinikum Tübingen. 
-            Over the course of my graduate and postdoctoral research, I have analyzed diverse data types—genomic, transcriptomic, metagenomic and clinical—across multiple organisms. 
-            My research interests are evolving toward machine learning applications, particularly in developing effective data representations for complex biological datasets—returning to approaches I explored during my MSc work on genomic sequence representations.
+            Over the course of my graduate and postdoctoral research, I have analyzed diverse data types — genomic, transcriptomic, metagenomic and clinical — across multiple organisms. 
+            My research interests are evolving toward machine learning applications in cancer research, particularly in developing effective data representations for complex biological datasets—returning to 
+            approaches I explored during my MSc work on genomic sequence representations.
         </p>
             <div class="publication-card">
                 <span class="pub-type">Genome Research</span>
@@ -210,9 +211,8 @@
 
     <section id="cv" class="cv-section">
         <h2>Curriculum Vitae</h2>
-        <p>You can download my CV as a PDF or view it online:</p>
-        <a href="Athanasouli_CV.pdf" target="_blank" class="cv-link">Download CV (PDF)</a>
-        <!--<embed src="Athanasouli_CV.pdf" type="application/pdf" width="100%" height="600px">-->
+        <a href="Athanasouli_CV.pdf" target="_blank" class="cv-link">Download CV as a PDF</a>
+        <embed src="Athanasouli_CV.pdf" type="application/pdf" width="100%" height="600px">
     
         <p style="text-align: center; margin-top: 20px; color: #666;">
             <em>Last updated: September 2025</em>
@@ -221,13 +221,13 @@
 
     <script>
         function showSection(id) {
-            const sections = ['home', 'cv'];
+            const sections = ['about', 'cv'];
             sections.forEach(s => {
                 document.getElementById(s).style.display = (s === id) ? 'block' : 'none';
             });
         }
 
-        showSection('home');
+        showSection('about');
     </script>
 </body>
 </html>
