--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <nav style="text-align:center; margin-bottom:30px;">
-        <button onclick="showSection('about')" id="tab-about" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">about</button>
+        <button onclick="showSection('about')" id="tab-about" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">About</button>
         <button onclick="showSection('cv')" id="tab-cv" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">CV</button>
     </nav>
 
@@ -203,10 +203,19 @@
             <div class="publication-card">
                 <span class="pub-type">Genome Research</span>
                 <h3 class="pub-title">Interspecies systems biology links bacterial metabolic pathways to nematode gene expression, chemotaxis behavior, and survival</h3>
-                <p class="pub-authors"><em>Athanasouli Marina, Loschko Tobias, Roedelsperger Christian</em></p>
+                <p class="pub-authors"><em> <strong>Athanasouli M</strong>, Loschko T, Roedelsperger C</em></p>
                 <p class="pub-year">2025</p>
                 <a href="https://doi.org/10.1101/gr.280848.125" target="_blank" class="pub-button">Link to manuscript</a>
-        </div>
+            </div>
+            
+            <div class="publication-card">
+                <span class="pub-type">Journal of Experimental Zoology Part B: Molecular and Developmental Evolution</span>
+                <h3 class="pub-title">High Nutritional Conditions Influence Feeding Plasticity in Pristionchus pacificus and Render Worms Non Predatory</h3>
+                <p class="pub-authors"><em>Piskobulu V, <strong>Athanasouli M</strong> <i>et al.</i> </em></p>
+                <p class="pub-year">2025</p>
+                <a href=" https://doi.org/10.1002/jez.b.23284" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
     </section>
 
     <section id="cv" class="cv-section">
