--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 40px 20px;
             line-height: 1.6;
@@ -94,6 +94,19 @@
             margin-top: 0;
         }
 
+        .publications-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        @media (max-width: 768px) {
+            .publications-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
         .cv-section {
             background: #aca8d1;
             padding: 20px;
@@ -112,9 +125,9 @@
             background: #fff;
             border-radius: 10px;
             padding: 20px;
-            margin-top: 20px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            max-width: 600px;
+            display: flex;
+            flex-direction: column;
         }
 
         .pub-type {
@@ -126,6 +139,7 @@
             padding: 4px 8px;
             border-radius: 9999px;
             margin-bottom: 10px;
+            align-self: flex-start;
         }
 
         .pub-title {
@@ -153,6 +167,7 @@
             border-radius: 6px;
             text-decoration: none;
             font-size: 0.9em;
+            align-self: flex-start;
         }
 
         .pub-button:hover {
@@ -200,6 +215,8 @@
             My research interests are evolving toward machine learning applications in cancer research, particularly in developing effective data representations for complex biological datasets—returning to 
             approaches I explored during my MSc work on genomic sequence representations.
         </p>
+        
+        <div class="publications-grid">
             <div class="publication-card">
                 <span class="pub-type">Genome Research</span>
                 <h3 class="pub-title">Interspecies systems biology links bacterial metabolic pathways to nematode gene expression, chemotaxis behavior, and survival</h3>
@@ -215,7 +232,7 @@
                 <p class="pub-year">2025</p>
                 <a href=" https://doi.org/10.1002/jez.b.23284" target="_blank" class="pub-button">Link to manuscript</a>
             </div>
-
+        </div>
     </section>
 
     <section id="cv" class="cv-section">
