--- a/index.html
+++ b/index.html
@@ -147,16 +147,14 @@
             font-size: 1.1em;
         }
 
-        .pub-authors {
-            font-size: 0.9em;
+        .pub-journal-year {
+            font-size: 0.85em;
             color: #555;
-            margin: 8px 0;
+            margin-bottom: 10px;
         }
 
-        .pub-year {
-            font-size: 0.85em;
-            color: #888;
-            margin-bottom: 10px;
+        .pub-journal-year strong {
+            font-weight: bold;
         }
 
         .pub-button {
@@ -218,18 +216,16 @@
         
         <div class="publications-grid">
             <div class="publication-card">
-                <span class="pub-type">Genome Research</span>
                 <h3 class="pub-title">Interspecies systems biology links bacterial metabolic pathways to nematode gene expression, chemotaxis behavior, and survival</h3>
                 <p class="pub-authors"><em> <strong>Athanasouli M</strong>, Loschko T, Roedelsperger C</em></p>
-                <p class="pub-year">2025</p>
+                <p class="pub-journal-year"><strong>Genome Research</strong> (2025)</p>
                 <a href="https://doi.org/10.1101/gr.280848.125" target="_blank" class="pub-button">Link to manuscript</a>
             </div>
             
             <div class="publication-card">
-                <span class="pub-type">Journal of Experimental Zoology Part B: Molecular and Developmental Evolution</span>
                 <h3 class="pub-title">High Nutritional Conditions Influence Feeding Plasticity in Pristionchus pacificus and Render Worms Non Predatory</h3>
                 <p class="pub-authors"><em>Piskobulu V, <strong>Athanasouli M</strong> <i>et al.</i> </em></p>
-                <p class="pub-year">2025</p>
+                <p class="pub-journal-year"><strong>Journal of Experimental Zoology Part B: Molecular and Developmental Evolution</strong> (2025)</p>
                 <a href=" https://doi.org/10.1002/jez.b.23284" target="_blank" class="pub-button">Link to manuscript</a>
             </div>
         </div>
