--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         }
 
         .pub-journal-year {
-            font-size: 0.85em;
+            font-size: 1.1em;
             color: #555;
             margin-bottom: 10px;
         }
@@ -223,11 +223,61 @@
             </div>
             
             <div class="publication-card">
-                <h3 class="pub-title">High Nutritional Conditions Influence Feeding Plasticity in Pristionchus pacificus and Render Worms Non Predatory</h3>
+                <h3 class="pub-title">High Nutritional Conditions Influence Feeding Plasticity in <i>Pristionchus pacificus</i> and Render Worms Non Predatory</h3>
                 <p class="pub-authors"><em>Piskobulu V, <strong>Athanasouli M</strong> <i>et al.</i> </em></p>
                 <p class="pub-journal-year"><strong>Journal of Experimental Zoology Part B: Molecular and Developmental Evolution</strong> (2025)</p>
                 <a href=" https://doi.org/10.1002/jez.b.23284" target="_blank" class="pub-button">Link to manuscript</a>
             </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">Genome Assembly of the Nematode <i>Rhabditoides Inermis</i> From a Complex Microbial Community</h3>
+                <p class="pub-authors"><em>Roedelsperger C, Roeseler W, <strong>Athanasouli M</strong> <i>et al.</i> </em></p>
+                <p class="pub-journal-year"><strong>Genome Biology and Evolution</strong> (2024)</p>
+                <a href=" https://doi.org/10.1093/gbe/evae230" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">Thousands of <i>Pristionchus pacificus</i> orphan genes were integrated into developmental networks that respond to diverse environmental microbiota</h3>
+                <p class="pub-authors"><em><strong>Athanasouli M</strong>, Akduman N <i>et al.</i> </em></p>
+                <p class="pub-journal-year"><strong>PLoS Genetics</strong> (2023)</p>
+                <a href=" https://doi.org/10.1371/journal.pgen.1010832" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">A New Hope: A Hermaphroditic Nematode Enables Analysis of a Recent Whole Genome Duplication Event</h3>
+                <p class="pub-authors"><em>Wighard S, <strong>Athanasouli M</strong> <i>et al.</i> </em></p>
+                <p class="pub-journal-year"><strong>Genome Biology and Evolution</strong> (2022)</p>
+                <a href=" https://doi.org/10.1093/gbe/evac169" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">Analysis of repeat elements in the <i>Pristionchus pacificus</i> genome reveals an ancient invasion by horizontally transferred transposons</h3>
+                <p class="pub-authors"><em><strong>Athanasouli M</strong> and Roedelsperger C</em></p>
+                <p class="pub-journal-year"><strong>BMC Genomics</strong> (2022)</p>
+                <a href=" https://doi.org/10.1186/s12864-022-08731-1" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">Comparative genomics and community curation further improve gene annotations in the nematode <i>Pristionchus pacificus</i></h3>
+                <p class="pub-authors"><em><strong>Athanasouli M</strong>, Witte H <i>et al.</i></em></p>
+                <p class="pub-journal-year"><strong>BMC Genomics</strong> (2020)</p>
+                <a href=" https://doi.org/10.1186/s12864-020-07100-0" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">Evaluation of distributed DNA representations on the classification of conserved non-coding elements</h3>
+                <p class="pub-authors"><em>Gialitsis N, Giannakopoulos G, <strong>Athanasouli M</strong></em></p>
+                <p class="pub-journal-year"><strong>SETN 2020: 11th Hellenic Conference on Artificial Intelligence</strong> (2020)</p>
+                <a href=" https://doi.org/10.1145/3411408.3411463" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
+            <div class="publication-card">
+                <h3 class="pub-title">Crowdsourcing and the feasibility of manual gene annotation: A pilot study in the nematode <i>Pristionchus pacificus</i></h3>
+                <p class="pub-authors"><em>Roedelsperger C, <strong>Athanasouli M</strong> <i>et al.</i></em></p>
+                <p class="pub-journal-year"><strong>Scientific Reports</strong> (2019)</p>
+                <a href=" https://doi.org/10.1038/s41598-019-55359-5" target="_blank" class="pub-button">Link to manuscript</a>
+            </div>
+
         </div>
     </section>
 
