--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
 
         .pub-button {
             display: inline-block;
-            background: #6366f1;
+            background: #aca8d1;
             color: white;
-            padding: 8px 16px;
+            padding: 15px 35px;
             border-radius: 6px;
             text-decoration: none;
-            font-size: 0.9em;
+            font-size: 1.1em;
             align-self: flex-start;
         }
 
