--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
 
         .pub-button {
             display: inline-block;
-            background: #aca8d1;
+            background: #6366f1;
             color: white;
-            padding: 15px 35px;
+            padding: 8px 16px;
             border-radius: 6px;
             text-decoration: none;
-            font-size: 1.1em;
+            font-size: 0.9em;
             align-self: flex-start;
         }
 
@@ -203,8 +203,8 @@
     </div>
 
     <nav style="text-align:center; margin-bottom:30px;">
-        <button onclick="showSection('about')" id="tab-about" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">About</button>
-        <button onclick="showSection('cv')" id="tab-cv" style="padding:10px 20px; margin:5px; border:none; background:#6366f1; color:white; border-radius:6px; cursor:pointer;">CV</button>
+        <button onclick="showSection('about')" id="tab-about" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">About</button>
+        <button onclick="showSection('cv')" id="tab-cv" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">CV</button>
     </nav>
 
     <section id="about" class="about-section">
