--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
     <div class="header">
         <div class="header-left">
             <h1>Marina Athanasouli, PhD</h1>
-            <p>Postdoctoral researcher/Bioinformatician in M3 Research Center (Universitaetsklinikum Tuebingen)</p>
+            <p>Postdoctoral researcher/Bioinformatician at M3 Research Center (Innere Medizin I, Universitaetsklinikum Tuebingen)</p>
+            <p><a href="marina.agapi.athanasouli@med.uni-tuebingen.de" style="color: #0066cc; text-decoration: none;">marina.agapi.athanasouli@med.uni-tuebingen.de</a></p>
         </div>
 
         <div class="header-right">
