--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             transition: transform 0.2s;
         }
 
-        .social-links a i.linkedin { color: #0077b5; }
-        .social-links a i.github { color: #333; }
-        .social-links a i.scholar { color: #4285f4; }
+        .social-links a i.fa-linkedin { color: #0077b5; }
+        .social-links a i.fa-github { color: #333; }
+        .social-links a i.fa-graduation-cap { color: #4285f4; }
 
         .social-links a:hover i{
             transform: scale(1.2);
