--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             margin-top: 15px; 
         }
 
+        .social-links a {
+            text-decoration: none;
+            display: inline-block;
+        }
+
         .social-links a i{
             font-size: 1.8em;
             transition: transform 0.2s;
