--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <section id="about" class="about-section">
         <p>I am a postdoctoral researcher in bioinformatics with the Translational Microbiome Science group at Universitaetsklinikum Tübingen. 
-            Over the course of my graduate and postdoctoral research, I have analyzed diverse data types — genomic, transcriptomic, metagenomic and clinical — across multiple organisms. 
+            Over the course of my graduate and postdoctoral research, I have handled a wide range of data — genomic, transcriptomic, metagenomic and clinical — across multiple organisms. 
             My research interests are evolving toward machine learning applications in cancer research, particularly in developing effective data representations for complex biological datasets — returning to 
             approaches I explored during my MSc work on genomic sequence representations.
         </p>
