--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
             margin-top: 0;
         }
 
+        .publications-section {
+            padding: 20px;
+            background: #aca8d1;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(15, 15, 15, 0.05);
+        }
+
+        .publications-section h2{
+            margin-top:0;
+        }
+
         .publications-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -177,7 +188,7 @@
             background: #4f46e5;
         }
 
-        #about, #cv {
+        #about, #publications, #cv {
             display: none;
         }
     </style>
@@ -186,7 +197,8 @@
     <div class="header">
         <div class="header-left">
             <h1>Marina Athanasouli, PhD</h1>
-            <p>Postdoctoral researcher/Bioinformatician at M3 Research Center (Innere Medizin I, Universitaetsklinikum Tuebingen)</p>
+            <p>Postdoctoral researcher/Bioinformatician at M3 Research Center</p>
+            <p>Innere Medizin I, Universitaetsklinikum Tuebingen</p>
             <p><a href="marina.agapi.athanasouli@med.uni-tuebingen.de" style="color: #0066cc; text-decoration: none;">marina.agapi.athanasouli@med.uni-tuebingen.de</a></p>
         
                 <div class="social-links">
@@ -209,6 +221,7 @@
 
     <nav style="text-align:center; margin-bottom:30px;">
         <button onclick="showSection('about')" id="tab-about" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">About</button>
+        <button onclick="showSection('publications')" id="tab-publications" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">Publications</button>
         <button onclick="showSection('cv')" id="tab-cv" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">CV</button>
     </nav>
 
@@ -218,6 +231,9 @@
             My research interests are evolving toward machine learning applications in cancer research, particularly in developing effective data representations for complex biological datasets — returning to 
             approaches I explored during my MSc work on genomic sequence representations.
         </p>
+    </section>
+
+    <section id="publications" class="publications-section">
         
         <div class="publications-grid">
             <div class="publication-card">
