Added information in ABout section

--- a/index.html
+++ b/index.html
@@ -227,11 +227,44 @@
     </nav>
 
     <section id="about" class="about-section">
-        <p>I am a postdoctoral researcher in bioinformatics with the Translational Microbiome Science group at Universitaetsklinikum Tübingen. 
+        <p style="font-size: 1.2em;">I am a postdoctoral researcher in bioinformatics with the Translational Microbiome Science group at Universitaetsklinikum Tübingen. 
             Over the course of my graduate and postdoctoral research, I have handled a wide range of data — genomic, transcriptomic, metagenomic and clinical — across multiple organisms. 
             My research interests are evolving toward machine learning applications in cancer research, particularly in developing effective data representations for complex biological datasets — returning to 
             approaches I explored during my MSc work on genomic sequence representations.
         </p>
+
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 30px;">
+            <div>
+                <h3 style="margin-top: 0;">Interests</h3>
+                <ul style="list-style-type: disc; padding-left: 20px; line-height: 2;">
+                    <li>Bioinformatics</li>
+                    <li>Multi-omic Data Integration</li>
+                    <li>Machine Learning in Cancer Research</li>
+                    <li>Microbiome Science</li>
+                </ul>
+            </div>
+
+            <div>
+                <h3 style="margin-top: 0;">Education</h3>
+                <div style="line-height: 2;">
+                    <p style="margin: 10px 0;">
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
+                        <strong>PhD in Bionformatics/Systems Biology</strong><br>
+                        <span style="margin-left: 30px;">University of Tuebingen/Max Planck Institute for Biology Tuebingen</span>
+                    </p>
+                    <p style="margin: 10px 0;">
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
+                        <strong>MSc in Bioinformatics</strong><br>
+                        <span style="margin-left: 30px;">National and Kapodistrian University of Athens</span>
+                    </p>
+                    <p style="margin: 10px 0;">
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
+                        <strong>Diploma (BSc/MSc) in Agriculture and Agronomy</strong><br>
+                        <span style="margin-left: 30px;">Agricultural University of Athens</span>
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="publications" class="publications-section">
