Fixed font size

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 30px;">
             <div>
                 <h3 style="margin-top: 0;">Interests</h3>
-                <ul style="list-style-type: disc; padding-left: 20px; line-height: 2;font-size: medium;">
+                <ul style="list-style-type: disc; padding-left: 20px; line-height: 2;font-size: large;">
                     <li>Bioinformatics</li>
                     <li>Multi-omic Data Integration</li>
                     <li>Machine Learning in Cancer Research</li>
