--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 30px;">
             <div>
                 <h3 style="margin-top: 0;">Interests</h3>
-                <ul style="list-style-type: disc; padding-left: 20px; line-height: 2;font-size: large;">
+                <ul style="list-style-type: disc; padding-left: 20px; line-height: 2; font-size: large;">
                     <li>Bioinformatics</li>
                     <li>Multi-omic Data Integration</li>
                     <li>Machine Learning in Cancer Research</li>
@@ -248,17 +248,17 @@
                 <h3 style="margin-top: 0;">Education</h3>
                 <div style="line-height: 2;">
                     <p style="margin: 10px 0;">
-                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px; font-size: large;"></i>
                         <strong>PhD in Bionformatics/Systems Biology</strong><br>
                         <span style="margin-left: 30px;">University of Tuebingen/Max Planck Institute for Biology Tuebingen</span>
                     </p>
                     <p style="margin: 10px 0;">
-                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px; font-size: large;"></i>
                         <strong>MSc in Bioinformatics</strong><br>
                         <span style="margin-left: 30px;">National and Kapodistrian University of Athens</span>
                     </p>
                     <p style="margin: 10px 0;">
-                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px; font-size: large;"></i>
                         <strong>Diploma (BSc/MSc) in Agriculture and Agronomy</strong><br>
                         <span style="margin-left: 30px;">Agricultural University of Athens</span>
                     </p>
