--- a/index.html
+++ b/index.html
@@ -247,18 +247,18 @@
             <div>
                 <h3 style="margin-top: 0;">Education</h3>
                 <div style="line-height: 2;">
-                    <p style="margin: 10px 0;">
-                        <i class="fas fa-graduation-cap" style="margin-right: 10px; font-size: large;"></i>
+                    <p style="margin: 10px 0; font-size: large;">
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
                         <strong>PhD in Bionformatics/Systems Biology</strong><br>
                         <span style="margin-left: 30px;">University of Tuebingen/Max Planck Institute for Biology Tuebingen</span>
                     </p>
-                    <p style="margin: 10px 0;">
-                        <i class="fas fa-graduation-cap" style="margin-right: 10px; font-size: large;"></i>
+                    <p style="margin: 10px 0; font-size: large;">
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
                         <strong>MSc in Bioinformatics</strong><br>
                         <span style="margin-left: 30px;">National and Kapodistrian University of Athens</span>
                     </p>
-                    <p style="margin: 10px 0;">
-                        <i class="fas fa-graduation-cap" style="margin-right: 10px; font-size: large;"></i>
+                    <p style="margin: 10px 0; font-size: large;">
+                        <i class="fas fa-graduation-cap" style="margin-right: 10px; "></i>
                         <strong>Diploma (BSc/MSc) in Agriculture and Agronomy</strong><br>
                         <span style="margin-left: 30px;">Agricultural University of Athens</span>
                     </p>
