--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <p style="margin: 10px 0; font-size: large;">
                         <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
                         <strong>PhD in Bionformatics/Systems Biology</strong><br>
-                        <span style="margin-left: 30px;">University of Tuebingen</span>
+                        <span style="margin-left: 30px;">University of Tuebingen</span><br>
                         <span style="margin-left: 30px;">Max Planck Institute for Biology Tuebingen</span>
                     </p>
                     <p style="margin: 10px 0; font-size: large;">
