--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="header-left">
             <h1>Marina Athanasouli, PhD</h1>
             <p>Postdoctoral researcher/Bioinformatician at M3 Research Center</p>
-            <p>Innere Medizin I, Universitaetsklinikum Tuebingen</p>
+            <p>Innere Medizin I, Universitätsklinikum Tübingen</p>
             <p><a href="marina.agapi.athanasouli@med.uni-tuebingen.de" style="color: #0066cc; text-decoration: none;">marina.agapi.athanasouli@med.uni-tuebingen.de</a></p>
         
                 <div class="social-links">
@@ -250,8 +250,8 @@
                     <p style="margin: 10px 0; font-size: large;">
                         <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
                         <strong>PhD in Bionformatics/Systems Biology</strong><br>
-                        <span style="margin-left: 30px;">University of Tuebingen</span><br>
-                        <span style="margin-left: 30px;">Max Planck Institute for Biology Tuebingen</span>
+                        <span style="margin-left: 30px;">University of Tübingen</span><br>
+                        <span style="margin-left: 30px;">Max Planck Institute for Biology Tübingen</span>
                     </p>
                     <p style="margin: 10px 0; font-size: large;">
                         <i class="fas fa-graduation-cap" style="margin-right: 10px;"></i>
