--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin: 0 auto;
             padding: 40px 20px;
             line-height: 1.6;
+            background: #e8e5f2;
         }
         
         .header {
@@ -90,7 +91,7 @@
         .about-section {
             text-align: left;
             padding: 20px;
-            background: #aca8d1;
+            background: transparent;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(15, 15, 15, 0.05);
             font-size: 1em;
