--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         .header-left h1 {
             margin: 0;
             font-size: 2.2em;
+            background: transparent;
         }
         
         .header-left p {
