--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin: 0 auto;
             padding: 40px 20px;
             line-height: 1.6;
-            background: #59618a;
+            background: #a6acc9;
         }
         
         .header {
