--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin: 0 auto;
             padding: 40px 20px;
             line-height: 1.6;
-            background: #c5dae2;
+            background: #c5d7df;
         }
         
         .header {
@@ -36,7 +36,7 @@
         .header-left p {
             margin: 5px 0 0;
             font-size: 1.2em;
-            color: #555;
+            color: #353535;
         }
 
         .header-right {
