--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
     <section id="about" class="about-section">
         <p style="font-size: 1.2em;">I am a postdoctoral researcher in bioinformatics with the Translational Microbiome Science group at Universitätsklinikum Tübingen. 
             Over the course of my graduate and postdoctoral research, I have handled a wide range of data - genomic, transcriptomic, metagenomic and clinical - across multiple organisms. 
-            My research interests are evolving toward machine learning applications in cancer research, particularly in developing effective data representations for complex biological datasets - returning to 
-            approaches I explored during my MSc work on genomic sequence representations.
+            My research interests are centered around the integration of multi-omic modalities for the purpose of improving clinical applications and prognoses in biomedical research.
         </p>
 
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 30px;">
