--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
         .pub-button {
             display: inline-block;
-            background: #6366f1;
+            background: #5456a8;
             color: white;
             padding: 8px 16px;
             border-radius: 6px;
@@ -222,9 +222,9 @@
     </div>
 
     <nav style="text-align:center; margin-bottom:30px;">
-        <button onclick="showSection('about')" id="tab-about" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">About</button>
-        <button onclick="showSection('publications')" id="tab-publications" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">Publications</button>
-        <button onclick="showSection('cv')" id="tab-cv" style="padding:15px 35px; margin:5px; border:none; background:#6366f1; font-size:1.1em; color:white; border-radius:6px; cursor:pointer;">CV</button>
+        <button onclick="showSection('about')" id="tab-about" style="padding:15px 35px; margin:5px; border:none; background:#5456a8; font-size:1.2em; color:white; border-radius:6px; cursor:pointer;">About</button>
+        <button onclick="showSection('publications')" id="tab-publications" style="padding:15px 35px; margin:5px; border:none; background:#5456a8; font-size:1.2em; color:white; border-radius:6px; cursor:pointer;">Publications</button>
+        <button onclick="showSection('cv')" id="tab-cv" style="padding:15px 35px; margin:5px; border:none; background:#5456a8; font-size:1.2em; color:white; border-radius:6px; cursor:pointer;">CV</button>
     </nav>
 
     <section id="about" class="about-section">
