--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
 
     <section id="cv" class="cv-section">
         <h2>Curriculum Vitae</h2>
-        <a href="Athanasouli_CV_long.pdf" target="_blank" class="cv-link">Download as PDF</a>
-        <embed src="Athanasouli_CV_long.pdf" type="application/pdf" width="100%" height="600px">
+        <a href="Athanasouli_CV_noRefs.pdf" target="_blank" class="cv-link">Download as PDF</a>
+        <embed src="Athanasouli_CV_noRefs.pdf" type="application/pdf" width="100%" height="600px">
     
         <p style="text-align: center; margin-top: 20px; color: #666;">
             <em>Last updated: September 2025</em>
